--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 	</script>
 </head>
 <body id="body" onload="init();">
-	<div id="screen">
-		<div id="fullscreen" onmousedown="switchFullscreen()"></div>
-		<canvas id="canvas" width="800px" height="600px">
-			-SHUMP-
-		</canvas>
+	<div id="fullscreen" onmousedown="switchFullscreen()"></div>
+	<canvas id="canvas" width="800px" height="600px">
+		-SHUMP-
+	</canvas>
 	</div>
 
 	<script src="js/jquery-1.6.min.js"></script>
@@ -25,6 +24,7 @@
 	<script src="js/player.js"></script>
 	<script src="js/platform.js"></script>
 	<script src="js/enemy.js"></script>
+	<script src="js/soldier.js"></script>
 	<script src="js/input.js"></script>
 	<script src="js/game.js"></script>
 </body>
