--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body id="body" onload="init();">
 	<div id="fullscreen" onmousedown="switchFullscreen()"></div>
-	<canvas id="canvas" width="800px" height="600px">
+	<canvas id="canvas" width="800" height="600">
 		-SHUMP-
 	</canvas>
 	</div>
