--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	<script src="js/player.js"></script>
 	<script src="js/platform.js"></script>
 	<script src="js/enemy.js"></script>
-	<script src="js/soldier.js"></script>
+	<script src="js/stratAI.js"></script>
 	<script src="js/input.js"></script>
 	<script src="js/game.js"></script>
 </body>
