--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body id="body" onload="init();">
 	<div id="fullscreen" onmousedown="switchFullscreen()"></div>
 	<canvas id="canvas" width="800" height="600">
-		-SHUMP-
+		Z-DJUTER
 	</canvas>
 	</div>
 
