--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	<script src="js/enemy.js"></script>
 	<script src="js/stratAI.js"></script>
 	<script src="js/input.js"></script>
+	<script src="js/quadtree.js"></script>
 	<script src="js/game.js"></script>
 </body>
 </html>
