--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		Z-DJUTER
 	</canvas>
 	</div>
-
+	
 	<script src="js/jquery-1.6.min.js"></script>
 	<script src="js/easeljs-0.6.0.min.js"></script>
 	<script src="js/soundjs-0.4.0.min.js"></script>
@@ -27,6 +27,7 @@
 	<script src="js/stratAI.js"></script>
 	<script src="js/input.js"></script>
 	<script src="js/quadtree.js"></script>
+	<script src="js/astar.js"></script>
 	<script src="js/game.js"></script>
 </body>
 </html>
